# rinBot

./: .env  main.py  music.py  pyproject.toml
bot-env/Scripts/: activate  activate.bat
